--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "^0.55.4"
+    "react-native": "^0.55.4",
+    "react-navigation": "^2.11.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
