--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "^0.55.4",
     "react-navigation": "^2.11.2"
