--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "^0.55.4",
-    "react-navigation": "^2.11.2"
+    "react-navigation": "^2.11.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
