--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-navigation": "^2.11.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^10.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
