feature: Added i18n feature for the application.

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest", 
-    "bundle" : "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
-    
+    "test": "jest",
+    "bundle": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
   },
   "dependencies": {
     "firebase": "^4.13.1",
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "^0.55.4",
+    "react-native-i18n": "^2.0.15",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-navigation": "^2.11.2",
     "react-redux": "^5.0.7",
