--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,11 @@ package-lock.json
 /ReactCommon/**/*.xcodeproj
 RNTester/build
 src/config/config.js
+android/app/app-release.apk
+android/app/src/main/assets/index.android.bundle
+android/app/src/main/assets/index.android.bundle.meta
+android/app/src/main/res/drawable-hdpi
+android/app/src/main/res/drawable-mdpi
+android/app/src/main/res/drawable-xhdpi
+android/app/src/main/res/drawable-xxhdpi
+android/app/src/main/res/drawable-xxxhdpi
